# queryfit

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  download.sh
downloader/: config.ini.example  main.py  requirements.txt
src/: cli.rs  config.rs  db.rs  main.rs  models.rs
src/commands/: calculate.rs  config.rs  database.rs  devices.rs  info.rs  mod.rs  summary.rs
