[package]
name = "queryfit"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0" }
clap = { version = "4.5", features = ["derive"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
toml = { version = "0.9" }

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
