[package]
name = "queryfit"
version = "0.4.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0" }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
dirs = { version = "6.0" }
indicatif = { version = "0.18" }
fitparser = { version = "0.10" }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
toml = { version = "0.9" }
walkdir = { version = "2.5" }

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
